--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ ext.versions = [
     junit   : '4.12',
 
     // profiling dependencies
-    caliper : '0.5-rc1', // version 1.0 doesn't work with Android :(
+    caliper : '1.0-beta-2', // version 1.0 doesn't work with Android :(
 ]
 
 ext.libraries = [
