--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,3 +1,11 @@
+ext {
+    compileSdkVersion = 23
+    targetSdkVersion = 22
+    minSdkVersion = 21
+
+    buildToolsVersion = '23.0.3'
+}
+
 ext.versions = [
     // main dependencies
     guava   : '19.0',
